Format to alpha 6, fix resource location building